HEAD
	+ Add new config key auth_ad_negative_acl_ttl to configure negative ACL
	  cache time in external AD mode
	+ Explicitly specify to listen on all IPv4 interfaces
	+ Correctly escape DNs and search filters or external ACL helper script
	+ Fix group based filter access rules in external AD mode, retrieving
	  members of nested groups
	+ Improve squid group membership helper script
3.0.15
	+ Added support for external squid in SBE editions
3.0.14
	+ Mark logs as changed when an access rule is added, updated or deleted
	+ Fix duplicated entries generated by the LogHelper
	+ Prerouting rules have no iaccept chain, use ACCEPT target
	+ Explicitly set firewall version dependency in control file
3.0.13
	+ Fix parse of the dansguardian log in the LogHelper
	+ Make LogHelper extract data from internal and external log files
	+ Adapt firewall rules to new accept chains
	+ Handle domains that are actually IP addresses in the LogHelper
	+ Set transparent HTTP proxy firewall rules unless the module is
	  temporary stopped
3.0.12
	+ Use external squid log file to retrieve HTTP proxy requests
3.0.11
	+ Avoid warning in AccessRules validateTypedRow
3.0.10
	+ Squid time ACLs have independient ids. This fixes several issues
	  with combinations of time, dates and long acls
	+ Do not repeat Squid ACL declarations
	+ Changed HTTP keytab permission in order to avoid krb5_kt_add_entry errors
3.0.9
	+ Change the kerberos service from squid to http. Zarafa and Squid must
	  share the service principal.
	+ Disable DC reverse DNS lookup for msktutil commands
	+ Explicitly set the DC for msktutil command when updating the keytab
3.0.8
	+ Regenerate Kerberos keytab on LDAP reprovision
3.0.7
	+ Fixed bug which returned the list of users of a profile inside
	  another list
	+ Authenticate against external AD for Enterprise editions
3.0.6
	+ Avoid to request authorization again when 'deny unknown domain'
	  option is set in filter profile