@@ -50,7 +50,7 @@ load_url_lists = yes
 #   squid authenticate users against an external Active Directory.
 # values:
 #   - internal
-#   - external_ad (only for enterprise edition)
+#   - external_ad (only for commercial editions)
 auth_mode = internal
 
 # TAG: External AD authentication
